@@ -63,7 +63,7 @@
 #define MSG_LET_MISSING_EQ      "LET/CONST/APPEND: Missing '='"
 #define MSG_EXIT_ERR            "Use EXIT [FOR|LOOP|SUB|FUNC]"
 #define MSG_UDP_ALREADY_EXISTS  "The SUB/FUNC %s is already defined"
-#define MSG_MISSING_UDP_BODY    "FUNC/DEF it has an '=' on declaration, but I didn't found the body!"
+#define MSG_MISSING_UDP_BODY    "Block not found with FUNC/DEF declared using '='"
 #define MSG_UNIT_NAME_MISSING   "EXPORT: Unit name is not defined"
 #define MSG_ON_GOTO_ERR         "ON x GOTO WHERE?"
 #define MSG_ON_GOSUB_ERR        "ON x GOSUB WHERE?"
@@ -113,7 +113,7 @@
 #define MSG_CREATING_UNIT       "\nCreating Unit %s...\n"
 #define MSG_CREATING_BC         "Creating byte-code...\n"
 #define MSG_UNIT_NAME_DIF_THAN_SRC  "Warning: unit's file name is different than source\n"
-#define MSG_BC_FILE_CREATED         "ByteCode file '%s' created!\n"
+#define MSG_BC_FILE_CREATED         "ByteCode file '%s' created\n"
 #define MSG_BC_FILE_ERROR           "Can't create binary file\n"
 #define MSG_CASE_CASE_ELSE      "CASE following CASE ELSE"
 #define MSG_MISSING_END_SELECT  "SELECT/CASE without 'END SELECT'"
@@ -176,7 +176,7 @@
 #define ERR_STR_RANGE           "String: Index out of range (%d)"
 #define ERR_BAD_FILE_HANDLE     "VFS: Bad file number (Use OPEN)"
 #define ERR_SEP_FMT             "No separator found (missing %s)"
-#define ERR_POLY                "Parsing polyline: type mismatch! (element: %d, info: %d)"
+#define ERR_POLY                "Parsing polyline: type mismatch (element: %d, info: %d)"
 #define ERR_CRITICAL_MISSING_FUNC  "Unsupported built-in function call %ld, please report this bug"
 #define ERR_GPF                 "\n\aOUT OF ADDRESS SPACE\n"
 #define ERR_CRITICAL_MISSING_PROC  "Unsupported built-in procedure call %ld, please report this bug"
