@@ -1,4 +1,7 @@
 2017-03-12 (0.12.9)
+	COMMON: fix regression with dim MAP field
+
+2017-03-12 (0.12.9)
 	COMMON: fix internal error handling long string variables
 
 2017-02-08 (0.12.9)
